tests/trybuild/resources/type_unexpected_token.rs
use brood::Resources;

// Define resources.
struct A;
struct B;

type Resources = Resources!(A, + B);

fn main() {}
